# RK3588

./: README.md
rk3588_ocr/: CMakeLists.txt
rk3588_ocr/cmake/: rknpu2.cmake
rk3588_ocr/examples/: main.cpp
rk3588_ocr/scripts/: model_convert.py  static_cls_48x192.onnx
rk3588_ocr/stdeploy/: runtime.h  stdeploy_model.cpp  stdeploy_model.h  vision.h
rk3588_ocr/stdeploy/core/: sd_tensor.cpp  sd_tensor.h  sd_type.cpp  sd_type.h
rk3588_ocr/stdeploy/runtime/: enum_variables.cpp  enum_variables.h  runtime.cpp  runtime.h  runtime_option.cpp  runtime_option.h
rk3588_ocr/stdeploy/runtime/backends/: backend.h
rk3588_ocr/stdeploy/runtime/backends/rknpu2/: option.h  rknpu2_backend.cpp  rknpu2_backend.h  utils.cpp  utils.h
rk3588_ocr/stdeploy/runtime/backends/rknpu2/ops/: tokp.cpp  topk.h
rk3588_ocr/stdeploy/utils/: clipper.cpp  datapipe.h  file_util.cpp  file_util.h  log_util.cpp  log_util.h  md5.cpp  md5.hpp  perf.h  unique_ptr.h
rk3588_ocr/stdeploy/version/: version.h  version.h.in
rk3588_ocr/stdeploy/vision/classification/: model.cpp  model.h  postprocessor.cpp  postprocessor.h
rk3588_ocr/stdeploy/vision/common/: mat.cpp  mat.h  result.cpp  result.h  vision_struct.h
rk3588_ocr/stdeploy/vision/common/feature_extractor/: model.cpp  model.h
rk3588_ocr/stdeploy/vision/common/image_processes/: base.cpp  base.h  manager.cpp  manager.h  normalize.cpp  normalize.h  preprocessor.cpp  preprocessor.h  resize.cpp  resize.h
rk3588_ocr/stdeploy/vision/ocr/: crnn.cpp  crnn.h  crnn_postprocessor.cpp  crnn_postprocessor.h  dbnet.cpp  dbnet.h  dbnet_postprocessor.cpp  dbnet_postprocessor.h
rk3588_ocr/stdeploy/vision/ocr/ppocr/: ppocrv2.cpp  ppocrv2.h  ppocrv3.h  ppocrv4.h  text_angle_cls.cpp  text_angle_cls.h
rk3588_ocr/stdeploy/vision/ocr/utils/: get_rotate_crop_image.cpp  ocr_postprocess_op.cpp  ocr_postprocess_op.h  ocr_utils.h  sorted_boxes.cpp
rk3588_ocr/stdeploy/vision/utils/: argmax.h  cal_2d_relations.cpp  cosine_similarity.cpp  crop_image.cpp  face_algin.cpp  l2_normalize.cpp  layout_transform.cpp  nms.cpp  pixel_format_transform.cpp  sigmoid.h  softmax.h  utils.h
rk3588_ocr/stdeploy/vision/visualize/: vis_base.cpp  vis_base.h  vis_cls.cpp  vis_cls.h  visualize.cpp  visualize.h
rk3588_ocr/workspace/: cls.yaml  demo  det.yaml  ocr_translate.py  rec.yaml  rk3588_cls.rknn
rk3588_ocr/workspace/imgs/: 4_translation.txt  5_translation.txt
rk3588_ocr/workspace/libs/cmake/opencv4/: OpenCVConfig.cmake
useful-transformers/: transcribe_and_translate.py
useful-transformers/examples/examples/whisper/: transcribe_wav.py  whisper.py
useful-transformers/examples/examples/whisper/useful_transformers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
useful-transformers/lib/: layernorm.cc
useful-transformers/wav/: 20250709_111656.m4a  20250709_113438.m4a
